<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calculator</string>
    <string name="nameBtnMainLayout">Начнём вычисления</string>
    <string name="calcViewMain">Изображение калькулятора</string>
    <string name="_0">0</string>
    <string name="textBtnAC">AC</string>
    <string name="textBtnPlusMinus">+/-</string>
    <string name="textBtnPercent">%</string>
    <string name="textBtnDiv">/</string>
    <string name="textBtnSeven">7</string>
    <string name="textBtnNine">9</string>
    <string name="textBtnMulti">*</string>
    <string name="textBtnEight">8</string>
    <string name="textBtnFour">4</string>
    <string name="textBtnFive">5</string>
    <string name="textBtnSix">6</string>
    <string name="textBtnMinus">-</string>
    <string name="textBtnOne">1</string>
    <string name="textBtnTwo">2</string>
    <string name="textBtnThree">3</string>
    <string name="textBtnPlus">+</string>
    <string name="textBtnZero">0</string>
    <string name="textBtnComma">,</string>
    <string name="textBtnEqually">=</string>
    <string name="editTextOne">text text text\ntext text text\ntext text text\ntext text text</string>
    <string name="editTextText">text text text\ntext text text\ntext text text\ntext text text</string>
    <string name="this_is_robot">this is robot</string>
    <string name="editTextTwo">text text text\ntext text text\ntext text text\ntext text text</string>
    <string name="robot">robot</string>
    <string name="btnScrollView">Scroll View</string>
    <string name="btnTextMainDisplayExit">Выход</string>
    <string name="radiotextbtnnotnight">Светлая тема</string>
    <string name="radiobtntextnight">Тёмная тема</string>
    <string name="loginName">Введите логин</string>
    <string name="password">Введите пароль</string>
    <string name="my_style">Мой стиль</string>
    <string name="light_style">Светлая тема</string>
    <string name="dark_style">Тёмная тема</string>
    <string name="custom_style">Нестандартная тема</string>
    <string name="SettingsActivity">Активити с темами</string>
</resources>