<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_calc"
    tools:context=".CalcActivity">

    <TextView
        android:id="@+id/calcDisplay"
        style="@style/MyStyleDisplayCalc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopDisplay"
        android:layout_marginEnd="@dimen/marginEndDisplay"
        android:layout_marginRight="@dimen/marginRightDisplay"
        android:gravity="end"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="@dimen/textSizeDisplay"
        app:layout_constraintBottom_toTopOf="@+id/btnAC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAC"
        style="@style/MyStyleBtnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#947E6898"
        android:text="@string/textBtnAC"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeBtnCalc"
        app:layout_constraintBottom_toTopOf="@id/btnSeven"
        app:layout_constraintEnd_toStartOf="@id/btnPlusMinus"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calcDisplay" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPlusMinus"
        style="@style/MyStyleBtnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_btns_calc"
        android:text="@string/textBtnPlusMinus"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeBtnCalc"
        app:layout_constraintBottom_toTopOf="@id/btnEight"
        app:layout_constraintEnd_toStartOf="@id/btnPercent"
        app:layout_constraintStart_toEndOf="@id/btnAC"
        app:layout_constraintTop_toBottomOf="@id/calcDisplay" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPercent"
        style="@style/MyStyleBtnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_btns_calc"
        android:text="@string/textBtnPercent"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeBtnCalc"
        app:layout_constraintBottom_toTopOf="@id/btnNine"
        app:layout_constraintEnd_toStartOf="@id/btnDiv"
        app:layout_constraintStart_toEndOf="@id/btnPlusMinus"
        app:layout_constraintTop_toBottomOf="@id/calcDisplay" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDiv"
        style="@style/MyStyleBtnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_btns_calc"
        android:text="@string/textBtnDiv"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeBtnCalc"
        app:layout_constraintBottom_toTopOf="@id/btnMulti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnPercent"
        app:layout_constraintTop_toBottomOf="@id/calcDisplay" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSeven"
        style="@style/MyStyleBtnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_btns_calc"
        android:text="@string/textBtnSeven"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeBtnCalc"
        app:layout_constraintBottom_toTopOf="@id/btnFour"
        app:layout_constraintEnd_toStartOf="@id/btnEight"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAC" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEight"
        style="@style/MyStyleBtnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_btns_calc"
        android:text="@string/textBtnEight"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeBtnCalc"
        app:layout_constraintBottom_toTopOf="@id/btnFive"
        app:layout_constraintEnd_toStartOf="@id/btnNine"
        app:layout_constraintStart_toEndOf="@id/btnSeven"
        app:layout_constraintTop_toBottomOf="@id/btnPlusMinus" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNine"
        style="@style/MyStyleBtnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_btns_calc"
        android:text="@string/textBtnNine"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeBtnCalc"
        app:layout_constraintBottom_toTopOf="@id/btnSix"
        app:layout_constraintEnd_toStartOf="@id/btnMulti"
        app:layout_constraintStart_toEndOf="@id/btnEight"
        app:layout_constraintTop_toBottomOf="@id/btnPercent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMulti"
        style="@style/MyStyleBtnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_btns_calc"
        android:text="@string/textBtnMulti"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeBtnCalc"
        app:layout_constraintBottom_toTopOf="@id/btnMinus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnNine"
        app:layout_constraintTop_toBottomOf="@+id/btnDiv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFour"
        style="@style/MyStyleBtnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_btns_calc"
        android:text="@string/textBtnFour"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeBtnCalc"
        app:layout_constraintBottom_toTopOf="@id/btnOne"
        app:layout_constraintEnd_toStartOf="@id/btnFive"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSeven" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFive"
        style="@style/MyStyleBtnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_btns_calc"
        android:text="@string/textBtnFive"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeBtnCalc"
        app:layout_constraintBottom_toTopOf="@id/btnTwo"
        app:layout_constraintEnd_toStartOf="@id/btnSix"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btnFour"
        app:layout_constraintTop_toBottomOf="@id/btnEight"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSix"
        style="@style/MyStyleBtnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_btns_calc"
        android:text="@string/textBtnSix"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeBtnCalc"
        app:layout_constraintBottom_toTopOf="@id/btnThree"
        app:layout_constraintEnd_toStartOf="@id/btnMinus"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btnFive"
        app:layout_constraintTop_toBottomOf="@id/btnNine"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMinus"
        style="@style/MyStyleBtnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_btns_calc"
        android:text="@string/textBtnMinus"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeBtnCalc"
        app:layout_constraintBottom_toTopOf="@id/btnPlus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btnSix"
        app:layout_constraintTop_toBottomOf="@+id/btnMulti"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOne"
        style="@style/MyStyleBtnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_btns_calc"
        android:text="@string/textBtnOne"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeBtnCalc"
        app:layout_constraintBottom_toTopOf="@id/btnZero"
        app:layout_constraintEnd_toStartOf="@id/btnTwo"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnFour" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTwo"
        style="@style/MyStyleBtnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_btns_calc"
        android:text="@string/textBtnTwo"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeBtnCalc"
        app:layout_constraintBottom_toTopOf="@id/btnZero"
        app:layout_constraintEnd_toStartOf="@id/btnThree"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btnOne"
        app:layout_constraintTop_toBottomOf="@id/btnFive"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnThree"
        style="@style/MyStyleBtnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_btns_calc"
        android:text="@string/textBtnThree"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeBtnCalc"
        app:layout_constraintBottom_toTopOf="@id/btnComma"
        app:layout_constraintEnd_toStartOf="@id/btnPlus"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btnTwo"
        app:layout_constraintTop_toBottomOf="@id/btnSix"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPlus"
        style="@style/MyStyleBtnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_btns_calc"
        android:text="@string/textBtnPlus"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeBtnCalc"
        app:layout_constraintBottom_toTopOf="@id/btnEqually"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btnThree"
        app:layout_constraintTop_toBottomOf="@+id/btnMinus"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnZero"
        style="@style/MyStyleBtnCalc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_btns_calc"
        android:text="@string/textBtnZero"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeBtnCalc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnComma"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnOne" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnComma"
        style="@style/MyStyleBtnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_btns_calc"
        android:text="@string/textBtnComma"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeBtnCalc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnEqually"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btnZero"
        app:layout_constraintTop_toBottomOf="@id/btnThree"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEqually"
        style="@style/MyStyleBtnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_btns_calc"
        android:text="@string/textBtnEqually"
        android:textColor="@color/white"
        android:textSize="@dimen/sizeBtnCalc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btnComma"
        app:layout_constraintTop_toBottomOf="@+id/btnPlus"
        app:layout_constraintVertical_chainStyle="packed" />


</androidx.constraintlayout.widget.ConstraintLayout>