<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivityChangeThemeApp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputLoginName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginName"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        app:layout_constraintStart_toEndOf="@+id/buttonOk"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCancel">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMyStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_style" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonLightStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light_style" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonDarkStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_style" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonCustomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_style" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>