<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText

        android:id="@+id/edit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@android:color/transparent"
        android:gravity="top"
        android:inputType="text"
        android:maxLines="1"
        android:text="@string/editTextOne"
        android:textSize="@dimen/sizeBtnCalc"
        tools:ignore="LabelFor,TextFields"
        tools:targetApi="lollipop" />


    <ScrollView
        android:id="@+id/scrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        tools:ignore="ScrollViewCount">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText

                    android:id="@+id/edit2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:inputType="text"
                    android:maxLines="1"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:singleLine="false"
                    android:text="@string/editTextText"
                    android:textSize="@dimen/sizeBtnCalc"
                    tools:ignore="LabelFor" />

            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/this_is_robot"
            android:src="@drawable/android_robot"
            app:srcCompat="@drawable/android_robot" />

        <!-- И так тоже не работает -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <EditText

                    android:id="@+id/edit3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:inputType="text"
                    android:maxLines="1"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:singleLine="false"
                    android:text="@string/editTextTwo"
                    android:textSize="@dimen/sizeBtnCalc"
                    tools:ignore="LabelFor" />

            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/robot"
            android:src="@drawable/android_robot"
            app:srcCompat="@drawable/android_robot" />


    </ScrollView>


</androidx.core.widget.NestedScrollView>